Bugfix/UX: Remove `align-items` from `flex-row` CSS
This might visually break something in NetTango, but Jeremy told me it
was okay.

--- a/public/stylesheets/classes.css
+++ b/public/stylesheets/classes.css
@@ -189,5 +189,4 @@ img.link-img {
 .flex-row {
   display: flex;
   flex-direction: row;
-  align-items: center;
 }
